volumes of meta updated

--- a/P007896.opf/meta.yml
+++ b/P007896.opf/meta.yml
@@ -5,12 +5,11 @@ source_metadata:
   title: དེབ་ཆུང་ཨ་རུ་རའི་དགའ་ཚལ
   author: ''
   volumes:
-    78180d0a7bcf4820b4ca3e5274bfa223:
+    9540e0cee4e3493f8f591c5466b9a0ec:
       image_group_id: I1PD28135
-      title: Volume 1 of deb chung a ru ra'i dga' tshal
+      title: ''
       volume_number: 1
       total_pages: 364
-      base_file: v001.txt
 ebook_metadata:
   title: དེབ་ཆུང་ཨ་རུ་རའི་དགའ་ཚལ
   author: ''
