--- a/P007896.opf/layers/v001/Pagination.yml
+++ b/P007896.opf/layers/v001/Pagination.yml
@@ -1,5 +1,5 @@
 id: 8ebda8baedb1425faccd4fae05993b33
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   b150d9c45234435db235ebff2cf41750:
