--- a/P007896.opf/meta.yml
+++ b/P007896.opf/meta.yml
@@ -1,7 +1,7 @@
 id: P007896
 initial_creation_type: ocr
 created_at: 22/03/2020
-last_modified_at: 25/11/2021
+last_modified_at: 2021-12-17 12:47:52.008722
 source_metadata:
   id: bdr:W24589
   title: དེབ་ཆུང་ཨ་རུ་རའི་དགའ་ཚལ
@@ -13,3 +13,5 @@ source_metadata:
       volume_number: 1
       total_pages: 364
       base_file: v001.txt
+  access: http://purl.bdrc.io/admindata/AccessOpen
+  restrictedInChina: false
